Add copy() do Pandas datas

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a7d96192",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
        "Name: Id, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,92 +481,17 @@
        "      <th>4</th>\n",
        "      <td>Pioneer, Miser Engineering Systems Analyst</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Engineering Systems Analyst Water Industry</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Senior Subsea Pipeline Integrity Engineer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>RECRUITMENT CONSULTANT  INDUSTRIAL / COMMERCIAL / ENGINEERING / DRIV</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>RECRUITMENT CONSULTANT  CONSTRUCTION / TECHNICAL / TRADES LABOUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Subsea Cables Engineer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Trainee Mortgage Advisor  East Midlands</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>PROJECT ENGINEER, PHARMACEUTICAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Principal Composite Stress Engineer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Senior Fatigue Damage Tolerance Engineer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Chef de Partie  Award Winning Restaurant  Excellent Tips</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Quality Engineer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Principal Controls Engineer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Chef de Partie  Award Winning Dining  Live In  Share of Tips</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Senior Fatigue and Damage Tolerance Engineer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>C I Design Engineer</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                   Title\n",
-       "0                                            Engineering Systems Analyst\n",
-       "1                                                Stress Engineer Glasgow\n",
-       "2                                       Modelling and simulation analyst\n",
-       "3                    Engineering Systems Analyst / Mathematical Modeller\n",
-       "4                             Pioneer, Miser Engineering Systems Analyst\n",
-       "5                             Engineering Systems Analyst Water Industry\n",
-       "6                              Senior Subsea Pipeline Integrity Engineer\n",
-       "7   RECRUITMENT CONSULTANT  INDUSTRIAL / COMMERCIAL / ENGINEERING / DRIV\n",
-       "8       RECRUITMENT CONSULTANT  CONSTRUCTION / TECHNICAL / TRADES LABOUR\n",
-       "9                                                 Subsea Cables Engineer\n",
-       "10                               Trainee Mortgage Advisor  East Midlands\n",
-       "11                                      PROJECT ENGINEER, PHARMACEUTICAL\n",
-       "12                                   Principal Composite Stress Engineer\n",
-       "13                              Senior Fatigue Damage Tolerance Engineer\n",
-       "14              Chef de Partie  Award Winning Restaurant  Excellent Tips\n",
-       "15                                                      Quality Engineer\n",
-       "16                                           Principal Controls Engineer\n",
-       "17          Chef de Partie  Award Winning Dining  Live In  Share of Tips\n",
-       "18                          Senior Fatigue and Damage Tolerance Engineer\n",
-       "19                                                   C I Design Engineer"
+       "                                                 Title\n",
+       "0                          Engineering Systems Analyst\n",
+       "1                              Stress Engineer Glasgow\n",
+       "2                     Modelling and simulation analyst\n",
+       "3  Engineering Systems Analyst / Mathematical Modeller\n",
+       "4           Pioneer, Miser Engineering Systems Analyst"
       ]
      },
      "execution_count": 9,
@@ -575,10 +500,10 @@
     }
    ],
    "source": [
-    "df_Title = full_df[[\"Title\"]]\n",
+    "df_Title = full_df[[\"Title\"]].copy()\n",
     "df_Title = df_Title.astype({'Title': 'string'})\n",
     "df_Title.info()\n",
-    "df_Title.head(20)"
+    "df_Title.head()"
    ]
   },
   {
@@ -851,7 +776,7 @@
     }
    ],
    "source": [
-    "df_FullDescription = full_df[[\"FullDescription\"]]\n",
+    "df_FullDescription = full_df[[\"FullDescription\"]].copy()\n",
     "df_FullDescription = df_FullDescription.astype({'FullDescription': 'string'})\n",
     "df_FullDescription.info()\n",
     "df_FullDescription.head(20)"
@@ -945,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "cfef81ee",
    "metadata": {},
    "outputs": [
@@ -1096,13 +1021,13 @@
        "19       Wolverhampton, West Midlands"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_LocationRaw = full_df[[\"LocationRaw\"]]\n",
+    "df_LocationRaw = full_df[[\"LocationRaw\"]].copy()\n",
     "df_LocationRaw = df_LocationRaw.astype({'LocationRaw': 'string'})\n",
     "df_LocationRaw.info()\n",
     "df_LocationRaw.head(20)"
@@ -1118,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "ca73ba3b",
    "metadata": {},
    "outputs": [
@@ -1129,7 +1054,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "f3b8ae18",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1078,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1194,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "78e45e0a",
    "metadata": {},
    "outputs": [
@@ -1345,13 +1270,13 @@
        "19      Wolverhampton"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_LocationNormalized = full_df[[\"LocationNormalized\"]]\n",
+    "df_LocationNormalized = full_df[[\"LocationNormalized\"]].copy()\n",
     "df_LocationNormalized = df_LocationNormalized.astype({'LocationNormalized': 'string'})\n",
     "df_LocationNormalized.info()\n",
     "df_LocationNormalized.head(20)"
@@ -1367,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "2bc4f41e",
    "metadata": {},
    "outputs": [
@@ -1378,7 +1303,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "1d101047",
    "metadata": {},
    "outputs": [
@@ -1402,7 +1327,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "c0bd3c4a",
    "metadata": {},
    "outputs": [
@@ -1594,13 +1519,13 @@
        "19         <NA>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_ContractType = full_df[[\"ContractType\"]]\n",
+    "df_ContractType = full_df[[\"ContractType\"]].copy()\n",
     "df_ContractType = df_ContractType.astype({'ContractType': 'string'})\n",
     "df_ContractType.info()\n",
     "df_ContractType.head(20)"
@@ -1616,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "4b554a1c",
    "metadata": {},
    "outputs": [
@@ -1627,7 +1552,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "43314e8f",
    "metadata": {},
    "outputs": [
@@ -1651,7 +1576,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1706,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "925fbbd5",
    "metadata": {},
    "outputs": [
@@ -1857,13 +1782,13 @@
        "19    permanent"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_ContractTime = full_df[[\"ContractTime\"]]\n",
+    "df_ContractTime = full_df[[\"ContractTime\"]].copy()\n",
     "df_ContractTime = df_ContractTime.astype({'ContractTime': 'string'})\n",
     "df_ContractTime.info()\n",
     "df_ContractTime.head(20)"
@@ -1879,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "e5fdd712",
    "metadata": {},
    "outputs": [
@@ -1890,7 +1815,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "1a43017a",
    "metadata": {},
    "outputs": [
@@ -1914,7 +1839,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1965,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "fbacdeaa",
    "metadata": {},
    "outputs": [
@@ -2116,13 +2041,13 @@
        "19       Rullion Engineering Ltd"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_Company = full_df[[\"Company\"]]\n",
+    "df_Company = full_df[[\"Company\"]].copy()\n",
     "df_Company = df_Company.astype({'Company': 'string'})\n",
     "df_Company.info()\n",
     "df_Company.head(20)"
@@ -2138,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "220e700d",
    "metadata": {},
    "outputs": [
@@ -2149,7 +2074,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2162,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "3466b85d",
    "metadata": {},
    "outputs": [
@@ -2173,7 +2098,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2226,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "c539a2f8",
    "metadata": {},
    "outputs": [
@@ -2377,13 +2302,13 @@
        "19             Engineering Jobs"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_Category = full_df[[\"Category\"]]\n",
+    "df_Category = full_df[[\"Category\"]].copy()\n",
     "df_Category = df_Category.astype({'Category': 'string'})\n",
     "df_Category.info()\n",
     "df_Category.head(20)"
@@ -2399,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "36cd8b54",
    "metadata": {},
    "outputs": [
@@ -2410,7 +2335,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2423,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "aa5712b1",
    "metadata": {},
    "outputs": [
@@ -2434,7 +2359,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2484,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "id": "253fd2b2",
    "metadata": {},
    "outputs": [
@@ -2635,13 +2560,13 @@
        "19                    33000 - 34000/annum + benefits"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_SalaryRaw = full_df[[\"SalaryRaw\"]]\n",
+    "df_SalaryRaw = full_df[[\"SalaryRaw\"]].copy()\n",
     "df_SalaryRaw = df_SalaryRaw.astype({'SalaryRaw': 'string'})\n",
     "df_SalaryRaw.info()\n",
     "df_SalaryRaw.head(20)"
@@ -2657,7 +2582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "id": "5575e7cc",
    "metadata": {},
    "outputs": [
@@ -2668,7 +2593,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2681,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "id": "80e2cb84",
    "metadata": {},
    "outputs": [
@@ -2692,7 +2617,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2730,7 +2655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "id": "d9286df5",
    "metadata": {},
    "outputs": [
@@ -2881,13 +2806,13 @@
        "19           33500.0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_SalaryNormalized = full_df[[\"SalaryNormalized\"]]\n",
+    "df_SalaryNormalized = full_df[[\"SalaryNormalized\"]].copy()\n",
     "df_SalaryNormalized = df_SalaryNormalized.astype({'SalaryNormalized': 'float64'})\n",
     "df_SalaryNormalized.info()\n",
     "df_SalaryNormalized.head(20)"
@@ -2903,7 +2828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "id": "df66dd0d",
    "metadata": {},
    "outputs": [
@@ -2914,7 +2839,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2927,7 +2852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "id": "4446a12c",
    "metadata": {},
    "outputs": [
@@ -2938,7 +2863,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2976,7 +2901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "id": "92ca978c",
    "metadata": {},
    "outputs": [
@@ -3127,13 +3052,13 @@
        "19  cv-library.co.uk"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_SourceName = full_df[[\"SourceName\"]]\n",
+    "df_SourceName = full_df[[\"SourceName\"]].copy()\n",
     "df_SourceName = df_SourceName.astype({'SourceName': 'string'})\n",
     "df_SourceName.info()\n",
     "df_SourceName.head(20)"
@@ -3149,7 +3074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "id": "574e01e5",
    "metadata": {},
    "outputs": [
@@ -3160,7 +3085,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3173,7 +3098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "id": "cb29181a",
    "metadata": {},
    "outputs": [
@@ -3184,7 +3109,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
