:rocket: Add load-v1 load SalaryNormalized feature to model step.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2655,7 +2655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "d9286df5",
    "metadata": {},
    "outputs": [
@@ -2806,7 +2806,7 @@
        "19           33500.0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2828,7 +2828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "df66dd0d",
    "metadata": {},
    "outputs": [
@@ -2839,7 +2839,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2852,7 +2852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "4446a12c",
    "metadata": {},
    "outputs": [
@@ -2863,7 +2863,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3148,7 +3148,29 @@
    "id": "cd31c187",
    "metadata": {},
    "source": [
-    "## 04.1 - Load-v1 (?)"
+    "## 04.1 - Load-v1 (Trabalhando apenas com a coluna SalaryNormalized)\n",
+    "Bem, vamos começar salvando a coluna (feature) mais básica e simples possível para iniciarmos nossa etapa de modelagem. Para isso, vamos utilizar a coluna (feature) **\"SalaryNormalized\"**, qual já recebeu um *Pré-Processamento* feito pelo **Adzuna**.\n",
+    "\n",
+    "**NOTE:**  \n",
+    "Por hora, vamos ignorar se Adzuna realmente fez um bom trabalho e vamos focar em ter algo disponível para a etapa de **modelagem** trabalhar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8d18f69f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_SalaryNormalized.to_csv(\"df_SalaryNormalized\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f3de0c3",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
