:rocket: update preliminary analysis and training models

--- a/notebooks/preliminary-analysis.ipynb
+++ b/notebooks/preliminary-analysis.ipynb
@@ -22,7 +22,7 @@
    "id": "490e1f70",
    "metadata": {},
    "source": [
-    "Inicialmente vamos baixar as bibliotecas necessárias para nossa análise (Eu já tenho todas baixadas no meu ambiente virtual mas você pode remover o comentário e baixar para sua máquina local ou Ambiente Virtual)."
+    "Inicialmente vamos baixar as bibliotecas necessárias para nossa análise (Eu já tenho todas baixadas no meu ambiente virtual, mas você pode remover o comentário e baixar para sua máquina local ou Ambiente Virtual)."
    ]
   },
   {
@@ -51,6 +51,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import scipy.stats as stats\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "import py7zr"
@@ -62,7 +63,7 @@
    "metadata": {},
    "source": [
     "# 02 - Overview\n",
-    "Agora que nós já extraímos o dataset vamos dar uma olhada rápida nas 50 primeiras amostras do conjunto de dados e suas, respectivas, colunas:"
+    "Vamos iniciar com uma **Visão Geral (Overview)** do conjunto de dados:"
    ]
   },
   {
@@ -371,13 +372,24 @@
    "metadata": {},
    "source": [
     "# 04 - Dados missing\n",
-    "Vamos começar visualizando a quantidade de dados faltantes por coluna:"
+    "Nessa parte da nossa análise vamos verificar dados ausentes em cada variável (feature):\n",
+    " - Por quantidade numérica;\n",
+    " - E por, porcentagem (%)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fe0c174",
+   "metadata": {},
+   "source": [
+    "## 04.1 - Dados Missing por quantidade numérica\n",
+    "Vamos começar visualizando a quantidade numérica de dados faltantes por coluna:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "681bc464",
+   "id": "7dca63c7",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +425,7 @@
    "id": "2a486e84",
    "metadata": {},
    "source": [
-    "**NOTE:**  \n",
+    "## 04.2 - Dados Missing por porcentagem \n",
     "Agora, vamos analisar quanto porcento (%) representam esses dados faltantes:"
    ]
   },
@@ -456,21 +468,12 @@
    "id": "a86dfd4e",
    "metadata": {},
    "source": [
-    "Vejam que apenas as colunas **ContractType**, **ContractTime** e **Company** estão com mais de 10% dos dados faltando (missing).\n",
+    "Vejam que as colunas **ContractType**, **ContractTime** e **Company** estão com mais de 10% dos dados faltando (missing).\n",
     "\n",
     "**NOTE:**  \n",
-    "Outra observação é a coluna **ContractType** que tem 73% dos dados faltando, o que chega a ser crítico.\n",
+    "Outra observação é a coluna **ContractType** tem 73% dos dados faltando, o que chega a ser crítico.\n",
     "\n",
-    "> Isso, por que se você tem uma variável (atributo/feature) com mais de 60% dos dados faltando (missing) talvez essa variável na criação do modelo seja quase nula."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c03bc654",
-   "metadata": {},
-   "source": [
-    "# 05 - Correlação\n",
-    "Como nós sabemos o [método Pearson](https://en.wikipedia.org/wiki/Pearson_correlation_coefficient) (que é o mais utilizado para verificar correlações) utiliza variáveis numéricas para verificar o nível de correlação entre elas. Porém, a maioria das nossas variáveis são textos, apenas **Id** e **SalaryNormalized** são numéricas. Como não faz muito sentido verificar a correlação entre uma variável **\"x\"** e seu respectivo ID vamos ignorar essa etapa."
+    "> **Isso, por que se você tem uma variável (atributo/feature) com mais de 60% dos dados faltando (missing) talvez essa variável na criação do modelo seja quase nula.**"
    ]
   },
   {
@@ -478,7 +481,18 @@
    "id": "15c4a8cf",
    "metadata": {},
    "source": [
-    "# 06 - Análise estatística"
+    "# 05 - Análise Estatística\n",
+    "\n",
+    "> Por fim, vamos fazer uma breve **Análise Estatística** no conjunto de dados."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fb20c1d",
+   "metadata": {},
+   "source": [
+    "## 05.1 - Overview Estatístico\n",
+    "Vamos começar com um Overview básico das estatísticas de nossas variáveis (features) numéricas:"
    ]
   },
   {
@@ -509,6 +523,116 @@
   },
   {
    "cell_type": "markdown",
+   "id": "92478c86",
+   "metadata": {},
+   "source": [
+    "**NOTE:**  \n",
+    "Bem, como vocês podem ver a única variável (feature) que faz sentido alguma **Análise Estatística** é a **\"SalaryNormalized\" (que representa os salários normalizados anualmente pelo a Adzuna)**.\n",
+    "\n",
+    "**Mesmo sendo uma única variável (feature) nós podemos tirar alguns insights da mesma:**\n",
+    " - O **menor** salário de todos (anualmente) foi de **5.000**;\n",
+    " - O **maior** salário de todos (anualmente) foi de **200.000**;\n",
+    " - A **média (mean)** de todos os salários (anualmente) foi de **34.122**;\n",
+    " - A **mediana (median/2° Quartil = 50% dos dados)** de todos os salários (anualmente) foi de **30.000**:\n",
+    "   - Vejam que a nossa mediana não está tão distante da nossa média.\n",
+    " - O **Desvio Padrão (Standard Deviation/ que representa quão longe nós estamos da média)** é **17.640**.\n",
+    "\n",
+    "**NOTE:**  \n",
+    "Claro que essa é apenas uma **Análise Preliminar** e talvez nós vamos precisar melhorar essa variável (feature) futuramente, mesmo sabendo que essa variável é o resultado de um Pré-Processamento feito pelo **Adzuna**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27230f45",
+   "metadata": {},
+   "source": [
+    "## 05.2 - Verificando a moda (mode) da variável (feature) \"SalaryNormalized\"\n",
+    "Agora vamos utilizar a função **mode()** do próprio *Pandas* para verificar qual o salário mais frequente entre todos os salários."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "471df0b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    35000\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.SalaryNormalized.mode()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f025b20",
+   "metadata": {},
+   "source": [
+    "**NOTE:**  \n",
+    "Agora, vamos utilizar a classe **Counter** para contar os 10 primeiros valores mais frequentes entre os salários."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0c16fdf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(35000, 9178),\n",
+       " (30000, 8319),\n",
+       " (40000, 7688),\n",
+       " (45000, 6735),\n",
+       " (25000, 6309),\n",
+       " (32500, 6215),\n",
+       " (37500, 5756),\n",
+       " (27500, 5544),\n",
+       " (50000, 5424),\n",
+       " (42500, 4555)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "c = Counter(df.SalaryNormalized)\n",
+    "c.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1f08e02",
+   "metadata": {},
+   "source": [
+    "**NOTE:**  \n",
+    "Vejam que o valor (salário) mais frequente realmente foi **35.000** com **9.178** amostras."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c03bc654",
+   "metadata": {},
+   "source": [
+    "## 05.3 - Correlação\n",
+    "Como nós sabemos o [método Pearson](https://en.wikipedia.org/wiki/Pearson_correlation_coefficient) (que é o mais utilizado para verificar correlações) utiliza variáveis numéricas para verificar o nível de correlação entre elas. Porém, a maioria das nossas variáveis são textos, apenas **Id** e **SalaryNormalized** são numéricas. Como não faz muito sentido verificar a correlação entre uma variável **\"x\"** e seu respectivo ID vamos ignorar essa etapa."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a5f782c9",
    "metadata": {},
    "source": [
@@ -527,7 +651,15 @@
     " - Temos um grande conjunto de dados para trabalharmos:\n",
     "   - Com 244.768 amostras e 12 colunas (atributos/campos/features).\n",
     " - Porém, vai ser necessário um Pré-Processamento na maior parte das colunas, devido o fato das colunas serem representadas por textos (informações).\n",
-    " - Algumas colunas estão com muitos dados faltantes, principalmente a **ContractType** que tem **73%** dos dados faltantes."
+    " - Algumas colunas estão com muitos dados faltantes, principalmente a **ContractType** que tem **73%** dos dados faltantes.\n",
+    " - Estatísticas da variável (feature) **\"SalaryNormalized\"**:\n",
+    "   - O menor salário de todos (anualmente) foi de 5.000;\n",
+    "   - O maior salário de todos (anualmente) foi de 200.000;\n",
+    "   - A média (mean) de todos os salários (anualmente) foi de 34.122;\n",
+    "   - A mediana (median/2° Quartil = 50% dos dados) de todos os salários (anualmente) foi de 30.000:\n",
+    "     - Vejam que a nossa mediana não está tão distante da nossa média.\n",
+    "   - O Desvio Padrão (Standard Deviation/ que representa quão longe nós estamos da média) é 17.640.\n",
+    "   - A moda (o salário mais frequente) foi 35.000 com 9.178 amostras. "
    ]
   }
  ],
